--- a/playbook.yml
+++ b/playbook.yml
@@ -58,6 +58,19 @@
         group: systemd-journal-upload
         create: yes
 
+    - name: Add journald.conf config
+      template:
+        src: journald.conf.j2
+        dest: /etc/systemd/journald.conf
+        owner: root
+        group: root
+        mode: 0644
+
+    - name: Restart systemd-journald service
+      systemd:
+        service: systemd-journald
+        state: restarted
+
     - name: Run systemd-journal-upload service
       systemd:
         name: systemd-journal-upload
@@ -70,3 +83,13 @@
 
     - name: Restart auditd daemon
       command: "service auditd restart"
+
+    - name: Configure nginx
+      template:
+        src: nginx.conf.j2
+        dest: /etc/nginx/nginx.conf
+
+    - name: Reload nginx
+      systemd:
+        service: nginx
+        state: reloaded
