Audit log config files

--- a/playbook.yml
+++ b/playbook.yml
@@ -81,6 +81,31 @@
         path: /etc/audit/rules.d/audit.rules
         line: -w /etc/nginx/ -p wa -k nginx
 
+    - name: Install audispd-plugins
+      yum:
+        name: audispd-plugins
+        state: installed
+
+    - name: Configure auditd.conf
+      copy: 
+        src: auditd.conf 
+        dest: /etc/audit/auditd.conf 
+
+    - name: Configure audisp-remote.conf
+      template: 
+        src: audisp-remote.conf.j2 
+        dest: /etc/audisp/audisp-remote.conf
+
+    - name: Configure au-remote.conf
+      copy: 
+        src: au-remote.conf 
+        dest: /etc/audisp/plugins.d/au-remote.conf
+
+    - name: Configure syslog.conf
+      copy: 
+        src: syslog.conf 
+        dest: /etc/audisp/plugins.d/syslog.conf 
+
     - name: Restart auditd daemon
       command: "service auditd restart"
 
